--- a/templates/admin_pedidos.html
+++ b/templates/admin_pedidos.html
@@ -44,7 +44,7 @@
                 <td class="p-3">{{ p.estado }}</td>
                 <td class="p-3">{{ p.creado_en.strftime('%d/%m/%Y %H:%M') }}</td>
                 <td class="p-3 space-x-3">
-                    <a href="/admin/pedidos/{{ p.id }}" class="text-blue-600 hover:underline">Ver</a>
+                    <a href="/admin/pedidos/{{ p.id }}" class="text-[#ff751f] hover:underline">Ver</a>
                     <a href="/admin/pedidos/eliminar/{{ p.id }}" 
                        class="text-red-600 hover:underline"
                        onclick="return confirm('¿Eliminar pedido?')">Eliminar</a>
