--- a/templates/admin_productos.html
+++ b/templates/admin_productos.html
@@ -50,7 +50,7 @@
                 <td class="p-3">${{ p.precio }}</td>
                 <td class="p-3">{{ p.stock }}</td>
                 <td class="p-3 space-x-3">
-                    <a href="/admin/productos/editar/{{ p.id }}" class="text-blue-600 hover:underline">Editar</a>
+                    <a href="/admin/productos/editar/{{ p.id }}" class="text-[#ff751f] hover:underline">Editar</a>
                     <a href="/admin/productos/eliminar/{{ p.id }}" class="text-red-600 hover:underline"
                        onclick="return confirm('¿Seguro que deseas eliminar este producto?')">Eliminar</a>
                 </td>
