--- a/templates/admin_usuarios.html
+++ b/templates/admin_usuarios.html
@@ -50,7 +50,7 @@
                 <td class="p-3">{{ u.email }}</td>
                 <td class="p-3">{{ u.rol }}</td>
                 <td class="p-3 space-x-3">
-                    <a href="/admin/usuarios/editar/{{ u.id }}" class="text-blue-600 hover:underline">Editar</a>
+                    <a href="/admin/usuarios/editar/{{ u.id }}" class="text-[#ff751f] hover:underline">Editar</a>
                     <a href="/admin/usuarios/eliminar/{{ u.id }}" class="text-red-600 hover:underline"
                        onclick="return confirm('¿Seguro que deseas eliminar este usuario?')">Eliminar</a>
                 </td>
